--- a/.github/workflows/build_py37.yml
+++ b/.github/workflows/build_py37.yml
@@ -138,5 +138,6 @@ jobs:
     - name: Run pylint
       continue-on-error: true
       run: |
-        pylint typedattr
+        pylint src
         pylint tests
+#
