--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,8 @@ disable = [
     'attribute-defined-outside-init', 'consider-using-with', 'global-statement',
     'import-outside-toplevel', 'super-init-not-called', 'broad-exception-caught',
     'disallowed-name', 'redefined-outer-name', 'use-implicit-booleaness-not-comparison-to-zero',
-    'eval-used',
+    'eval-used', 'unknown-option-value', 'arguments-differ','subprocess-run-check',
+    'use-implicit-booleaness-not-comparison-to-string', 'use-dict-literal',
 ]
 
 [tool.pylint.format]
