--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,12 @@ include-package-data = false
 version = { attr = "packg.__version__" }
 dependencies = {file = ["requirements.txt"]}
 
+[tool.black]
+line-length = 100
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+markers = ["slow"]
 
 [tool.coverage.run]
 source_pkgs = ["packg"]
@@ -70,6 +74,7 @@ disable = [
     'disallowed-name', 'redefined-outer-name', 'use-implicit-booleaness-not-comparison-to-zero',
     'eval-used', 'unknown-option-value', 'arguments-differ','subprocess-run-check',
     'use-implicit-booleaness-not-comparison-to-string', 'use-dict-literal',
+    'useless-suppression',
 ]
 
 [tool.pylint.format]
