--- a/.github/workflows/build-py37.yml
+++ b/.github/workflows/build-py37.yml
@@ -1,4 +1,4 @@
-name: build for python 3.7
+nmame: build for python 3.7
 
 on:
   workflow_dispatch:
@@ -34,9 +34,6 @@ jobs:
       uses: conda-incubator/setup-miniconda@v3
       with:
         activate-environment: ${{ env.W_ENV_NAME }}
-        miniforge-variant: Mambaforge
-        miniforge-version: latest
-        use-mamba: true
 #
     - name: Collect information
       id: collect-info
@@ -95,7 +92,7 @@ jobs:
 #
     - name: Conda install packages
       run: |
-        mamba env update -q -n ${{ env.W_ENV_NAME }} -f ${{ env.W_REQ_CONDA }}
+        conda env update -q -n ${{ env.W_ENV_NAME }} -f ${{ env.W_REQ_CONDA }}
       if: steps.cache-conda-restore.outputs.cache-matched-key == ''
       id: conda-install
 #
@@ -133,7 +130,7 @@ jobs:
 #
     - name: Run pytest
       run: |
-        python -m pytest --cov
+        python -m pytest -vv --tb=long --cov
 #
     - name: Run pylint
       continue-on-error: true
