refactor docs and fix toml reading

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+typedparser
+
 attrs
 numpy
 joblib
 importlib_resources
 loguru
 natsort
-typedparser
 pyyaml
 python-dotenv
 pathspec
@@ -12,3 +13,4 @@ zstandard
 tqdm
 requests
 deprecated
+tomlkit
