--- a/.github/workflows/build-py39.yml
+++ b/.github/workflows/build-py39.yml
@@ -34,6 +34,9 @@ jobs:
       uses: conda-incubator/setup-miniconda@v3
       with:
         activate-environment: ${{ env.W_ENV_NAME }}
+        miniforge-version: latest
+        channels: conda-forge
+        conda-remove-defaults: "true"
 #
     - name: Collect information
       id: collect-info
