--- a/.github/workflows/build-py311.yml
+++ b/.github/workflows/build-py311.yml
@@ -36,7 +36,7 @@ jobs:
         activate-environment: ${{ env.W_ENV_NAME }}
         miniforge-version: latest
         channels: conda-forge
-        conda-remove-defaults: "true"
+        conda-remove-defaults: true
 #
     - name: Collect information
       id: collect-info
